syntax = "proto3";

package communication;

import "google/protobuf/timestamp.proto";

service Casa {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
    rpc Stream(stream StreamRequest) returns (stream StreamResponse) {}
}

message LoginRequest {
    string password = 1;
    string name     = 2;
}

message LoginResponse {
    string token = 1;
}

message LogoutRequest {
    string token = 1;
}

message LogoutResponse {}

message StreamRequest {
    string id = 1;
    string message = 2;
}

message StreamResponse {
    google.protobuf.Timestamp timestamp = 1;

    oneof event {
        Alarms   client_alarms = 2;
        Alerts   client_alerts = 3;
        Devices  client_devices = 4;
        Toggle   client_toggle = 5;
    }

    message Login {
        string name = 1;
    }

    message Logout {
        string name = 1;
    }

    message Alarms {
        string id = 1;
        string  method = 2;
        string identifier = 3;
    }

    message Alerts {
        string method = 1;
        string identifier = 2;
    }

    message Devices {
        string method = 1;
        string identifier = 2;
    }

    message Toggle {
        bool on = 1;
        string alarmId = 2;
    }
}